--- a/static/css/highlight_monokai.css
+++ b/static/css/highlight_monokai.css
@@ -5,7 +5,7 @@ Monokai style - ported by Luigi Maselli - http://grigio.org
 .hljs {
   display: block;
   overflow-x: auto;
-  padding: 0.5em;
+  padding: 1em;
   background: #272822;
   -webkit-text-size-adjust: none;
 }
@@ -20,7 +20,7 @@ Monokai style - ported by Luigi Maselli - http://grigio.org
 .hljs-flow,
 .nginx .hljs-title,
 .tex .hljs-special {
-  color: #f92672;
+  color: #9189ff;
 }
 
 .hljs {
