--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,12 +5,13 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <main id="index" role="main">
   <div class="article-header light-gray"><h1>Recent Articles</h1></div>
-  {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
-  {{ range $paginator.Pages }}
-  <div class="summary">
+  {{ $pages := site.RegularPages }}
+  {{ range $pages.ByPublishDate.Reverse }}
+    <div class="summary">
     <h2><a href="{{ .Permalink }}">{{ .Title }} {{ if .Draft }}:: DRAFT{{end}}</a></h2>
+    <p>{{ .Summary }}</p>
     <div class="meta">
-      {{ .Date.Format "Jan 2, 2006" }} &nbsp;
+      {{ .Date.Format "2006-01-02" }} &nbsp;
       {{ range .Params.tags }}
         #<a href="/tags/{{ . | urlize }}">{{ . }}</a>&nbsp;
       {{ end }}
@@ -23,7 +24,7 @@
 <!-- Paginator Section Layout
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <nav>
-  {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
+  {{ $paginator := .Paginate (where .Data.Pages "Type" "posts") }}
   {{ template "_internal/pagination.html" . }}
 </nav>
 
