--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,7 +11,7 @@
 
 </div>
 
-<script src="/js/highlight.pack.js"></script>
+<script src="/js/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
 {{ with .Site.Params.analytics }}<script>
