--- a/static/css/sanitize.css
+++ b/static/css/sanitize.css
@@ -22,8 +22,8 @@ select{-moz-appearance:none;-webkit-appearance:none}
 select::-ms-expand{display:none}
 select::-ms-value{color:currentColor}
 table{border-collapse:collapse;border-spacing:0}
-::-moz-selection{background-color:#B3D4FC;text-shadow:none}
-::selection{background-color:#B3D4FC;text-shadow:none}
+::-moz-selection{background-color:#00a0d663;text-shadow:none}
+::selection{background-color:#00a0d663;text-shadow:none}
 @media screen{[hidden~=screen]{display:inherit}
 [hidden~=screen]:not(:active):not(:focus):not(:target){clip:rect(0 0 0 0)!important;position:absolute!important}
 }
