--- a/layouts/partials/bib_list.html
+++ b/layouts/partials/bib_list.html
@@ -1,4 +1,4 @@
-<script src="https://cdn.jsdelivr.net/gh/larsgw/citation.js@archive/citation.js/citation-0.4.0-10.min.js"></script>
+<script src="/js/citation-0.4.0-10.min.js"></script>
 <script>
   const Cite = require('citation-js');
 </script>
