--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -28,7 +28,8 @@
         </div>
       {{ end }}
     </article>
-    {{ partial "disqus.html" . }}
+    <!-- Seems banned in China mainland -->
+    <!-- {{ partial "disqus.html" . }} -->
   </main>
   
   <nav class="pagination-single">
